Change log for zeit.web
=======================

2.56 (unreleased)
-----------------

- Nothing changed yet.


2.55 (2016-02-09)
-----------------

- MAINT: Add enhanced window.Zeit javascript module to ZMO

- HOTFIX: Correctly parse jinja profiler toggle value

- ZON-2783: Add open graph sharing image width and height metadata

- ZON-2601: Add sharing links and article tags to AMPages

- ZON-2602: Add Nextread and Verlags-Nextread to AMPages

- ZON-2710: Use external SVG sprite in ZMO

- ZON-2732: Move celeraone device detection header setting to varnish

- ZON-2536: Move generic image assets to core module

- ZON-2692: Add instantarticle author fallback and local image captions

- ZON-2692: Remove instantarticle with missing block implementations from feed

- ZON-2613: Implement author teaser

- FIX: Unobtrusive loading of CeleraOne tracking script

- SUGAR: Implement assignment-conditional require blocks in jinja


2.54.1 (2016-02-02)
-------------------

- FIX: Remove tautologous GTM include in ZMO template

- FIX: Handle images without copyrights in instantarticle template

- FIX: Use correct URL to retrieve an author's comments


2.54 (2016-02-01)
-----------------

- FIX: Fix scope of schema.org SiteNavigationElement

- ZON-2701: Framebuilder: inline required SVG icons

- MAINT: Add byline to nextread teaser

- ZON-2617: Polish author page, handle missing content and add sharing image

- ZON-2686: Add Google Tag Manager to ZMO

- FIX: Change wording from 'Leser' to 'Aufrufe'in Buzzbox

- ZON-2535: Migrate ZMO to R/A/M page structure

- MAINT: Refurbish infobox tab link styles

- ZON-2593: Webtrekk tracking if newsletter-optin parameter is set

- ZON-2665: Centralize Module Class and integrate ZMO Buzbbox

- FIX: Determine ressort from navigation properly (bugsnag)

- ZON-2688: Update C1 headers and include tracking script


2.53 (2016-01-27)
-----------------

- HOTFIX: IVW: fix wrong variable for questionnaire
