@@ -105,4 +105,6 @@
 		background-color: #33333A
 		+background-image(linear-gradient(to right, #4A4A4A 0%, #2C2A2B 30%, #494A4E 60%, #3B3B3D 80%, #4A4A4A 100%))
 		color: $white
-		padding: $cp-padding 2*$cp-padding
+		padding: remify(24px 0 30px)
+		text-align: center
+
