@@ -3,11 +3,11 @@
 {% set module_layout = 'teaser-printkiosk' %}
 
 {% block before_module_list %}
-    <h3 class="{{ module_layout }}-group__title">{{ area.title }}</h3>
+    <h3 class="printkiosk__title">{{ area.title }}</h3>
 {% endblock %}
 
 {% block module_list %}
-    <div class="{{ module_layout }}-group__container {{ module_layout }}-group__container--shop ">
+    <div class="printkiosk__container">
         {{ super() }}
     </div>
 {% endblock %}
@@ -16,9 +16,9 @@
     {% set tracking_slug = '{}...{}'.format(region_loop.index, '-'.join([area.kind, module_layout])) %}
     <a  href="{{ area.read_more_url }}"
         data-id="{{ tracking_slug }}.paginationbutton"
-        class="button {{ module_layout }}-group__button js-bar-teaser-paginate"
+        class="button printkiosk__button js-bar-teaser-paginate"
         data-sourceurl="{{ view.content_url }}/area/{{ area.uniqueId.rsplit('/', 1)[-1] }}?p=">
-        {{ lama.use_svg_icon('shuffle', '{}-group__shuffle-icon'.format(module_layout), request) }}
+        {{ lama.use_svg_icon('shuffle', 'printkiosk__shuffle-icon', request) }}
         Weitere laden
     </a>
 {% endblock %}
