@@ -10,6 +10,8 @@ Change log for zeit.web
 2.55 (2016-02-09)
 -----------------
 
+- MAINT: Refactor printkiosk
+
 - MAINT: Add enhanced window.Zeit javascript module to ZMO
 
 - HOTFIX: Correctly parse jinja profiler toggle value
